--- a/React-Blog/src/App.css
+++ b/React-Blog/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
@@ -9,7 +11,7 @@
     width: 300px;
 }
 
-.todo, .styling{
+.styling{
     padding-left: 10px;
     margin-bottom: 5px;
 }
@@ -26,7 +28,7 @@ ul>li{
     list-style-type: none;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 .Counter {
     border: 1px solid black;
