--- a/React-Blog/styling/style.css
+++ b/React-Blog/styling/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 *{
     padding:0;
     margin:0;
@@ -9,6 +10,7 @@
     padding: 20px;
     max-width: max-content;
     margin: 1rem 1rem;
+
 }
 
 .form-styling input{
@@ -22,3 +24,17 @@
 button{
     margin-right: 10px;
 }
+
+.heading{
+    font-size: 30px;
+    font-weight: 600;
+    font-family: "DM Sans", sans-serif;
+}
+
+
+input{
+    padding: 5px;
+    margin-bottom: 5px;
+    width: 250px;
+}
+
